--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "babel-cli": "^6.14.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.14.0",
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
+    "mocha-test-dsl": "^0.3.0",
     "mocha": "^3.0.2",
     "mock-fs": "^3.11.0",
     "nodemon": "^1.8.1",
